Setup: created SCSS folder structure, and added Gotham fonts

--- a/deployment/sass/main.scss
+++ b/deployment/sass/main.scss
@@ -8,4 +8,5 @@
 @use "../../themesource/datawidgets/web/main.scss" as module7;
 @use "../../themesource/feedbackmodule/web/main.scss" as module8;
 @use "../../themesource/myfirstmodule/web/main.scss" as module9;
-@use "../../theme/web/main.scss" as module10;
+@use "../../themesource/trimm_designsystem/web/main.scss" as module10;
+@use "../../theme/web/main.scss" as module11;
