--- a/themesource/trimm_designsystem/web/main.scss
+++ b/themesource/trimm_designsystem/web/main.scss
@@ -6,6 +6,7 @@
 @import './tokens/shadow.scss';
 @import './tokens/border.scss';
 @import './tokens/fonts.scss';
+@import './components/button.scss';
 
 // Base styles js for testing
 body {
