--- a/themesource/trimm_designsystem/web/main.scss
+++ b/themesource/trimm_designsystem/web/main.scss
@@ -7,6 +7,7 @@
 @import './tokens/border.scss';
 @import './tokens/fonts.scss';
 @import './components/button.scss';
+@import './components/label.scss';
 
 // Base styles js for testing
 body {
