--- a/themesource/trimm_designsystem/web/main.scss
+++ b/themesource/trimm_designsystem/web/main.scss
@@ -8,6 +8,7 @@
 @import './tokens/fonts.scss';
 @import './components/button.scss';
 @import './components/label.scss';
+@import './components/menu.scss';
 
 // Base styles js for testing
 body {
