--- a/themesource/trimm_designsystem/web/main.scss
+++ b/themesource/trimm_designsystem/web/main.scss
@@ -9,6 +9,7 @@
 @import './components/button.scss';
 @import './components/label.scss';
 @import './components/menu.scss';
+@import './components/alert.scss';
 
 // Base styles js for testing
 body {
