--- a/themesource/trimm_designsystem/web/components/button.scss
+++ b/themesource/trimm_designsystem/web/components/button.scss
@@ -1,4 +1,5 @@
 // === BASE BUTTON STYLE ===
+// Use on Mendix Button widget
 // Used by all button variants to provide consistent structure
 .button-base {
   display: inline-flex;
