--- a/themesource/trimm_designsystem/web/main.scss
+++ b/themesource/trimm_designsystem/web/main.scss
@@ -10,6 +10,7 @@
 @import './components/label.scss';
 @import './components/menu.scss';
 @import './components/alert.scss';
+@import './components/tooltip.scss';
 
 // Base styles js for testing
 body {
