feat(switch): fully styled Mendix switch widget

--- a/themesource/trimm_designsystem/web/main.scss
+++ b/themesource/trimm_designsystem/web/main.scss
@@ -11,6 +11,7 @@
 @import './components/menu.scss';
 @import './components/alert.scss';
 @import './components/tooltip.scss';
+@import './components/switch.scss';
 
 // Base styles js for testing
 body {
