--- a/themesource/trimm_designsystem/web/main.scss
+++ b/themesource/trimm_designsystem/web/main.scss
@@ -12,6 +12,7 @@
 @import './components/alert.scss';
 @import './components/tooltip.scss';
 @import './components/switch.scss';
+@import './components/radio.scss';
 
 // Base styles js for testing
 body {
