--- a/themesource/trimm_designsystem/web/components/tooltip.scss
+++ b/themesource/trimm_designsystem/web/components/tooltip.scss
@@ -9,7 +9,7 @@
         padding: $spacing-8 $spacing-12;
         border-radius: $radius-4;
         font-size: $font-size-body-3;
-        font-weight: $font-weight-semibold;
+        font-weight: $font-weight-medium;
         box-shadow: $shadow-3 rgba(0, 0, 0, 0.15);
         line-height: 1.4;
         white-space: pre-line;
