--- a/themesource/trimm_designsystem/web/main.scss
+++ b/themesource/trimm_designsystem/web/main.scss
@@ -1,18 +1,6 @@
 @import '../../../theme/web/custom-variables';
-@import './tokens/colors.scss';
-@import './tokens/spacing.scss';
-@import './tokens/typography.scss';
-@import './tokens/radius.scss';
-@import './tokens/shadow.scss';
-@import './tokens/border.scss';
-@import './tokens/fonts.scss';
-@import './components/button.scss';
-@import './components/label.scss';
-@import './components/menu.scss';
-@import './components/alert.scss';
-@import './components/tooltip.scss';
-@import './components/switch.scss';
-@import './components/radio.scss';
+@import "./tokens/index.scss";
+@import "./components/index.scss"; 
 
 // Base styles js for testing
 body {
