--- a/theme-cache/web/theme.compiled.css
+++ b/theme-cache/web/theme.compiled.css
@@ -27953,6 +27953,18 @@ Do not render = "none"
   background-color: #FFFFFF;
   color: #231F20;
 }
+.btn-default:disabled, .btn-default.btn-disabled {
+  background-color: #6E6F72;
+  color: #FFFFFF;
+  border-color: #231F20;
+  cursor: not-allowed;
+  opacity: 0.6;
+}
+.btn-default:disabled:hover, .btn-default:disabled:focus, .btn-default:disabled:active, .btn-default.btn-disabled:hover, .btn-default.btn-disabled:focus, .btn-default.btn-disabled:active {
+  background-color: #6E6F72;
+  color: #FFFFFF;
+  border-color: #231F20;
+}
 .btn-default svg,
 .btn-default i.mdi,
 .btn-default span > svg {
