--- a/themesource/trimm_designsystem/web/components/label.scss
+++ b/themesource/trimm_designsystem/web/components/label.scss
@@ -9,30 +9,46 @@
     font-size: $font-size-body-3;
     padding: $spacing-4 $spacing-8;
     border-radius: $radius-4;
+    border: $border-1 solid $secondary-1;
     white-space: nowrap;
-    color: $base-white;
+    color: $base-black;
 }
 
 // === LABEL VARIANTS ===
 // Each maps to a support token from the design system
-.label-primary {
+.label-default {
     @extend .label-base;
     background-color: $brand-3; // Teal
+    color: $base-white;
+    border: none;
 }
 
 .label-secondary {
     @extend .label-base;
     background-color: $brand-2; // Orange
+    color: $base-white;
+    border: none;
 }
 
 .label-success {
     @extend .label-base;
     background-color: $support-3; // Green
+    color: $base-white;
+    border: none;
 }
 
 .label-danger {
     @extend .label-base;
     background-color: $support-2; // Red
+    color: $base-white;
+    border: none;
+}
+
+.label-warning {
+    @extend .label-base;
+    background-color: $support-4; //Yellow
+    color: $base-white;
+    border: none;
 }
 
 // === LABEL SIZES ===
