--- a/theme-cache/web/theme.compiled.css
+++ b/theme-cache/web/theme.compiled.css
@@ -28186,6 +28186,12 @@ Do not render = "none"
   box-shadow: inset 0 0 0 16px #0E808A !important;
 }
 
+.widget-switch .widget-switch-btn-wrapper:not(.checked) {
+  background-color: #FFFFFF !important;
+  border-color: rgba(110, 111, 114, 0.2) !important;
+  box-shadow: inset 0 0 0 16px rgba(110, 111, 114, 0.2) !important;
+}
+
 .widget-switch .widget-switch-btn-wrapper .widget-switch-btn.right {
   background-color: #FFFFFF !important;
 }
