--- a/themesource/trimm_designsystem/web/components/_tooltip.scss
+++ b/themesource/trimm_designsystem/web/components/_tooltip.scss
@@ -10,7 +10,7 @@
         border-radius: $radius-4;
         font-size: $font-size-body-3;
         font-weight: $font-weight-medium;
-        box-shadow: $shadow-3 rgba(0, 0, 0, 0.15);
+        box-shadow: $shadow-3;
         line-height: 1.4;
         white-space: pre-line;
     }
