--- a/themesource/trimm_designsystem/web/components/index.scss
+++ b/themesource/trimm_designsystem/web/components/index.scss
@@ -1,8 +1,9 @@
-@import "./alert.scss";
-@import "./button.scss";
-@import "./label.scss";
-@import "./menu.scss";
-@import "./radio.scss";
-@import "./switch.scss";
-@import "./tooltip.scss";
-@import "./text-area.scss";
+@import "./_alert.scss";
+@import "./_button.scss";
+@import "./_label.scss";
+@import "./_menu.scss";
+@import "./_radio.scss";
+@import "./_switch.scss";
+@import "./_tooltip.scss";
+@import "./_textarea.scss";
+@import "./_textbox.scss";
