--- a/themesource/trimm_designsystem/web/tokens/index.scss
+++ b/themesource/trimm_designsystem/web/tokens/index.scss
@@ -1,7 +1,7 @@
-@import "./border.scss";
-@import "./colors.scss";
-@import "./fonts.scss";
-@import "./spacing.scss";
-@import "./radius.scss";
-@import "./shadow.scss";
-@import "./typography.scss";
+@import "./_border.scss";
+@import "./_colors.scss";
+@import "./_fonts.scss";
+@import "./_spacing.scss";
+@import "./_radius.scss";
+@import "./_shadow.scss";
+@import "./_typography.scss";
